k8s/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${DEPLOYMENT}
  labels:
    app: ${DEPLOYMENT}
spec:
  selector:
    matchLabels:
      app: ${DEPLOYMENT}
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ${DEPLOYMENT}
    spec:
      containers:
      - image: ${CONTAINER_TAG}
        imagePullPolicy: Always
        name: ${DEPLOYMENT}
        ports:
        - containerPort: ${DEPLOYMENT_PORT}
          protocol: TCP 
        livenessProbe:
          httpGet:
            path: /health
            port: ${DEPLOYMENT_PORT}
          initialDelaySeconds: 15
          periodSeconds: 5
